# OpenStream

./: .gitignore  README.md  build_plugin.bat  compact.md
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  openstream_srt.cpp
android/app/src/main/java/dev/openstream/app/: MainActivity.kt
android/app/src/main/java/dev/openstream/app/camera/: Camera2Controller.kt  CameraLens.kt
android/app/src/main/java/dev/openstream/app/control/: CameraControlServer.kt
android/app/src/main/java/dev/openstream/app/discovery/: DiscoveredObsDevice.kt  ObsDiscoveryClient.kt  PhoneDiscoveryAdvertiser.kt
android/app/src/main/java/dev/openstream/app/encoder/: MediaCodecAudioEncoder.kt  MediaCodecVideoEncoder.kt
android/app/src/main/java/dev/openstream/app/stream/: ConnectionTarget.kt  SrtStreamClient.kt  StreamConfig.kt
android/app/src/main/java/dev/openstream/app/telemetry/: TelemetrySampler.kt
android/app/src/main/res/anim/: pulse.xml
android/app/src/main/res/drawable/: bg_btn_accent.xml  bg_btn_danger.xml  bg_btn_ghost.xml  bg_card.xml  bg_controls_panel.xml  bg_lens_selector.xml  live_dot.xml  scrim_bottom.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
docs/: architecture.md  protocol.md  setup.md  testing.md
obs-plugin/: CMakeLists.txt
obs-plugin/src/: openstream-source.cpp
tests/: test_repo_contract.py
tools/: openstream_receiver.py
